# tic-tac-toe-game

./: .env-example  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml
tic-tac-toe/: main.py
tic-tac-toe/config/: base.py  logger.py
tic-tac-toe/source/: bot.py  core.py  utils.py
